--- a/content/blog/2020-06-24-oop_c.md
+++ b/content/blog/2020-06-24-oop_c.md
@@ -1,12 +1,15 @@
 ---
 title: Programación orientada a objetos en C
 year: 2020
-month: 06
-day: 24
-hour: '22:00'
-excerpt: Este post va a ser algo corto y hablaré del porqué de esta página, principalmente son 3 motivos...
-picture: /images/blog/first_post/header.png
+month: 07
+day: 02
+hour: '00:25'
+excerpt: ¿Qué?, ¿programación orientada a objetos en C?, ¿es esto posible?, la respuesta es ¡sí, si es posible!, y no es tan complicado como suena, pero requiere de trabajo manual 💪, entonces, repasemos lo que es la programación orientada a objetos
+picture: /images/blog/oop_c/header.png
 ---
+
+El fin de este artículo es informativo, probablemente _no_ deberías hacer esto, es tardado y en
+C es mejor hacer las cosas de otra forma
 
 ¿Qué?, ¿programación orientada a objetos en C?, ¿es esto posible?, la respuesta es ¡sí, si es posible!, y no es tan complicado como suena, pero requiere de trabajo manual 💪, entonces, repasemos lo que es la programación orientada a objetos
 
@@ -14,7 +17,7 @@ picture: /images/blog/first_post/header.png
 > en la forma de procedimientos (llamados métodos)
 <p style="font-size: 0.7em; text-align: right">Tomado de <a href="https://en.wikipedia.org/wiki/Object-oriented_programming#cite_note-1">Wikipedia</a></p>
 
-Ok, pero, ¿cómo uso la OOP en C?
+Ok, pero ¿cómo uso la OOP en C?
 
 Antes de empezar, hay muchas formas de hacer esto, en general todas comparten ciertas similitudes, por lo que esta solo es una forma de hacerlo
 
@@ -22,9 +25,9 @@ Entonces, ¡comencemos!
 
 # Clases
 ¿Qué sería de un lenguaje orientado a objetos si no tuviera clases?, por eso es lo primero que debemos pensar en implementar.
-De hecho, no es tán difícil implementar esto.
+De hecho, no es difícil implementar esto.
 
-Primero, veamos como se crea una clase en C++:
+Primero, veamos cómo se crea una clase en C++:
 ```cpp
 class Clase [: [public|protected|private] Clase1, [public|protected|private] Clase2...]
 {
@@ -37,8 +40,7 @@ En C solo tenemos las ``struct``, pero con ellas podemos hacer todo, excepto pro
 hay muchas formas de hacer esto, algunas que no son tan privadas (por ejemplo, tener un prefijo para indicar que son privadas) o utilizar una estructura que implemente
 eso y solo pueda ser accedida desde un lugar privado 🙀.
 
-Para esto se requiere de algo:
-Una estructura que sirva para almacenar las variables privadas y que no pueda ser utilizada en el contexto _público_,
+Para esto se requiere de una estructura que sirva para almacenar las variables privadas y que no pueda ser utilizada en el contexto _público_,
 para ello vamos a recurrir a utilizar una _forward declaration_ de esta estructura.
 
 > _Forward declaration_ se refiere a declarar un identificador (tipo, variable, constante, función) a la que todavía no se le ha dado una definición completa
@@ -62,7 +64,7 @@ typedef struct MyClassPrivate
     int c;
 } MyClassPrivate;
 
-// obj->private solo puede ser accedido en este archivo* (hay maneras de saltarse esto, pero no las hablaré aquí)
+// obj->private solo puede ser accedido en este archivo* (hay maneras de saltarse esto, pero no las mencionaré aquí)
 ```
 
 # Constructores y destructores
@@ -72,7 +74,7 @@ typedef struct MyClassPrivate
 Los constructores son una de las partes más importantes, pues permiten la inicialización de los objetos a un estado
 en el que sea conveniente para el programa, por ejemplo, imaginemos una clase llamada "TcpConnection" y un constructor que tome
 una dirección ip y un puerto para conectarse, aquí se puede establecer esa parte de inicializar la conexión a un estado en el
-que realmente este conectado a "ip:puerto"
+que realmente esté conectado a "ip:puerto".
 
 En C++ contamos con distintos tipos de ctor, todos tienen la tarea de inicializar un objeto de una clase específica.
 * ``Class::Class()`` -> constructor vacío
@@ -98,19 +100,19 @@ Hey_ctor(&self);
 ```
 
 Sencillo, ¿no?, los demás constructores pueden ser implementador de la misma manera, solo basta con mandarle los parámetros que necesitemos,
-por ejemplo, un constructor que reciba un int quedaría así:
+por ejemplo, un constructor que reciba un int sería así:
 ```c
-// puesto que en C no existe la sobrecarga de funciones, podemos extender el nombre
+// puesto que en C no existe la sobrecarga de funciones, podemos extender el nombre del ctor con los parametros que reciba
 void Hey_ctor_i(Hey *self, int param);
 ```
 
-Oye, ¿y un destructor?💥
+Oye, ¿y un destructor? 💥
 
-¡Pues de la misma manera!, implementamos una función que se encargue de realizar esta función, veamos el siguiente ejemplo
+¡Pues de la misma manera!, implementamos una función que se encargue de realizar esta función, veamos el siguiente ejemplo:
 ```c
 void Hey_dtor(Hey *self);
 
-// y para usarla
+// y para usarlo
 Hey hey;
 Hey_ctor(&hey);
 // usamos el objeto
@@ -121,8 +123,10 @@ Hey_dtor(&hey); // y llamamos al dtor
 
 ```c
 // Class.h
+// Forward declare de la estructura para los campos privados
 struct MyClassPrivate;
 
+// Creamos la clase
 typedef struct MyClass
 {
     // variables privadas
@@ -132,37 +136,45 @@ typedef struct MyClass
     int a;
 } MyClass;
 
+// Ctor
 void MyClass_ctor(MyClass *self, int b, int c);
 
+// Método get_c
 int MyClass_get_c(MyClass *self);
 
+// dtor
 void MyClass_dtor(MyClass *self);
 
 // Class.c
 #include "class.H"
 #include <stdlib.h>
 
+// Definimos la estructura de la que anteriormente hicimos un forward declaration
 typedef struct MyClassPrivate
 {
     int b; // esta variable es privada :D
     int c; // esta también
 } MyClassPrivate;
 
+// Implementamos el ctor
 void MyClass_ctor(MyClass *self, int b, int c)
 {
+    // Inicializamos las variables
     self->a = 0;
-
-    self->private_members = malloc(sizeof(MyClassPrivate));
-
     self->private_members->b = b;
     self->private_members->c = c;
+
+    // Alojamos memoria
+    self->private_members = malloc(sizeof(MyClassPrivate));
 }
 
+// Método get_c
 int MyClass_get_c(MyClass *self)
 {
     return self->private_members->c;
 }
 
+// Dtor
 void MyClass_dtor(MyClass *self)
 {
     // limpiamos los recursos que haya utilizado MyClass
@@ -174,6 +186,7 @@ void MyClass_dtor(MyClass *self)
 
 int main(void)
 {
+    // Creamos una instancia de la clase MyClass e invocamos al ctor
     MyClass object;
     MyClass_ctor(&object, 3, 25);
 
@@ -183,24 +196,24 @@ int main(void)
     MyClass_dtor(&object);
 }
 ```
-Como se puede ver, no es tan complicado realizar esto, quizá un poco repetitivo, sin embargo, hay una cuestión, espero que la hayas notado ;)
+Como se puede ver, no es tan complicado realizar esto, quizá un poco repetitivo, sin embargo, hay una cuestión, espero que la hayas notado ;).
 
 ¡**Malloc** solo para implementar variables privadas! 😱
 
 Calma, que se puede implementar de otra forma, podemos tener un buffer local de memoria del tamaño que necesitemos para
-las variables privadas, o confiar y utilizar una convención para las variables privadas (personalmente creo que esto último es lo mejor)
+las variables privadas, o confiar y utilizar una convención para las variables privadas (personalmente creo que esto último es lo mejor).
 # Herencia
 
 > Es un mecanismo para permitir que una clase X se base en otra clase Y, estableciendo una relación "X es subclase de Y"
 
 <blockquote>
-    <i class="v-icon mdi mdi-alert" style="color: yellow; font-size: 2em"></i> Opinión personal
-    <br>
-    <p>Personalmente no soy partidiario de abusar de la herencia, pues creo que puede dar lugar a código muy complejo y difícil de mantener</p>
+    <i class="v-icon mdi mdi-alert" style="color: yellow; font-size: 2em"></i> Opinión 
+   <br>
+    <p>No soy partidario de abusar de la herencia, pues creo que puede dar lugar a código muy complejo y difícil de mantener</p>
 </blockquote>
 
 La herencia consiste en crear nuevas clases que partan de clases ya existentes, de manera que tienen todas las propiedades y métodos de la clase padre; implementar
-esto en C tampoco supone dificultad alguna, aunque siendo estrictos, lo implementamos a partir de la composición
+esto en C tampoco supone dificultad alguna, aunque siendo estrictos, lo implementamos utilizando la composición.
 ```cpp
 struct Object
 {
@@ -228,20 +241,20 @@ typedef struct 2dBox
     Object super; // clase base
     int width;
     int height;
-};
+} 2dBox;
 ```
 
-¿Cómo se ve la estructura ``2dBox`` en memoria?, pues de la siguiente manera (sin contar padding, alignment ni tamaño de los tipos de dato)
+¿Cómo se ve la estructura ``2dBox`` en memoria?, pues de la siguiente manera (sin contar padding, alignment ni tamaño de los tipos de dato).
 
 ![Layout en memoria](/images/blog/oop_c/mem_layout.png)
 
 Con la imagen anterior podemos observar que las propiedades de la clase Object van antes que cualquier propiedad de la clase 2dBox, bien podríamos ponerla en cualquier orden,
-pero por cuestión de estética las pondremos al principio
+pero por cuestión de estética las pondremos al principio.
 
-Hasta aquí todo bien, así que la herencia se puede resumir de la siguiente manera
+Hasta aquí todo bien, así que la herencia se puede resumir de la siguiente manera.
 > Para heredar de otras clases tenemos que recurrir a la composición
 
-Aún hay un aspecto que no hemos tocado, ¡las sobrecarga de métodos y los dtor virtuales!
+Aún hay un aspecto que no hemos tocado, ¡la sobrecarga de métodos y los dtor virtuales!
 
 # Polimorfismo
 
@@ -252,12 +265,12 @@ Antes de entrar a esto, voy a explicar que son los apuntadores a funcions, como 
 Los apuntadores a funciones (function pointers) son un tipo especial de apuntadores que tienen la característica de apuntar
 a una función y para llamar a la función a la que apuntan, los usamos como si fuera una función.
 
-La sintaxis para declarar un apuntador a función es la siguiente (lo se, es fea)
+La sintaxis para declarar un apuntador a función es la siguiente (lo se, es fea).
 ```
 [tipo de retorno] (*nombre de la variable)(parametros...);
 ```
 
-Y un uso de estos sería el siguiente
+Y un uso de estos sería el siguiente:
 ```c
 #include <stdio.h>
 int square(int param)
@@ -286,131 +299,184 @@ int main(void)
 }
 ```
 
-Los apuntadores a funciones son muy útiles cuando se desean implementar callbacks o personalizar el comportamiento de una función (por ejemplo, [qsort](https://en.cppreference.com/w/c/algorithm/qsort))
+Los apuntadores a funciones son muy útiles cuando se desean implementar callbacks o personalizar el comportamiento de una función (por ejemplo, [qsort](https://en.cppreference.com/w/c/algorithm/qsort)).
 
 ### Virtual method table
 También llamada vtable, es una forma de permitir las funciones virtuales (_dynamic dispatch_), es muy utilizada en muchos lenguajes,
 de manera sencilla, consiste en una tabla que contiene apuntadores a los métodos que se deben llamar para determinada instancia, de esta manera
-se sabe cual función virtual llamar.
+se sabe cuál función virtual llamar.
 
 
-Es importante mencionar que una vtable *es la misma* para objetos del mismo tipo, por lo que incluso se puede compartir.
+Es importante mencionar que una vtable *es la misma* para objetos del mismo tipo, por lo que se puede compartir entre todas las instancias de determinada clase.
 
-Veamos como implementar una vtable en C
+Un ejemplo de vtable para la siguiente clase (C++):
 
-```c
-// .h
-typedef struct
+```cpp
+
+class Hey
 {
-    int health;
-} Player;
+public:
+    virtual ~Hey() = default;
 
-typedef struct
-{
-    void (*damage_player)(Player *player); // función que puede ser cambiada por cualquier clase hija
-} EnemyVTable;
+    virtual void foo() = 0;
 
-typedef struct
-{
-    EnemyVTable const *vtable_ptr; // la vtable
-} Enemy;
-
-typedef struct
-{
-    Enemy super;
-    int health;
-} Orc;
-
-typedef struct
-{
-    Enemy super;
-    int health;
-} Dragon;
-
-void Enemy_ctor(Enemy *self);
-void Player_ctor(Player *self;
-void Orc_ctor(Orc *self);
-void Dragon_ctor(Dragon *self);
-
-static inline enemy_damage_player(Enemy *self, Player *player)
-{
-    (*self->vtable_ptr->damage_player)(player);
-}
-
-// .c
-
-void orc_damage_player(Enemy *enemy, Player *player)
-{
-    player->health -= 30;
-}
-
-void dragon_damage_player(Enemy *enemy, Player *player)
-{
-    player->health -= 500;
-}
-
-void Player_ctor(Player *self)
-{
-    self->health = 3000;
-}
-
-void Enemy_ctor(Enemy *self)
-{
-    static EnemyVTable const vtbl = {
-        NULL // No tiene una implementación
-    };
-}
-
-void Orc_ctor(Orc *self)
-{
-    static EnemyVTable const vtbl = {
-        &orc_damage_player
-    };
-    // Llamamos al ctor de la clase base
-    Enemy_ctor(&self->super);
-
-    self->super.vtable_ptr = vtbl;
-    self->health = 1000;
-}
-
-void Dragon_ctor(Dragon *self)
-{
-    static EnemyVTable const vtbl = {
-            &dragon_damage_player
-    };
-
-    // Llamamos al ctor de la clase base
-    Enemy_ctor(&self->super);
-
-    self->super.vtable_ptr = vtbl;
-    self->health = 10000;
-}
-```
-
-Vamos a explicar parte por parte, empezando con la declaración de la estructura EnemyVTable:
-```c
+    virtual void hey() = 0;
+};
 
 ```
 
-¡Ahora si!, vamos a probarlo todo
+
+|Método             |Función que realiza ese proceso|
+|-------------------|-------------------------------|
+|Hey_dtor           |0x123EDFAA                     |
+|Hey_foo            |0x00000000                     |
+|Hey_hey            |0x00000000                     |
+Nota: la función es la dirección de la función que realizará ese proceso, puesto que no tienen implementación (a excepción del dtor) entonces no deben apuntar a una dirección válida.
+
+Ahora veamos a la siguiente clase
+```cpp
+class Foo : public Hey
+{
+public:
+    virtual ~Foo() = default;
+    void foo() override{}
+    void hey() override{}
+};
+```
+Su vtable sería la siguiente (direcciones de memoria solo para demostración, no reflejan direcciones reales):
+
+|Método             |Función que realiza ese proceso|
+|-------------------|-------------------------------|
+|Foo_dtor           |0x123EDFAA                     |
+|Foo_foo            |0xAFE23400                     |
+|Foo_hey            |0xFF23400E                     |
+
+Puesto que esta clase ya implementa todos los métodos, entonces ya apuntan a direcciones válidas (que sean funciones).
+
+Va va, pero ¿cómo implemento **esto** en C?
+
+¿Recuerdas lo de apuntadores a funciones?, pues los vamos a utilizar.
+
+Introduciremos una estructura que cumpla con ese proposito:
+
+```c
+typedef struct Hey_Vtable
+{
+    void (*Class_dtor)(Hey *self);
+    void (*Hey_foo)(Hey *self);
+    void (*Hey_hey)(Hey *self);
+} Hey_Vtable;
+
+typedef struct Hey
+{
+    Hey_Vtable *vtable;
+} Hey;
+```
+
+¿Debemos implementar una estructura similar para Foo?, no, **a menos** que esta clase tenga más funciones virtuales, o utilizar [_type punning_](https://en.wikipedia.org/wiki/Type_punning).
 
 ```c
 
-int main(void)
+void Hey_dtor(Hey *self)
 {
-    Player player;
-    Player_ctor(&player);
-    
-    Orc orc;
-    Orc_ctor(&orc);
+}
 
-    Dragon dragon;
-    Dragon_ctor(&dragon);
-    
-    enemy_damage_player(&orc.super, &player); // nuestra salud baja a 2500
-    enemy_damage_player(&dragon.super, &player); // nuestra salud baja a 2470
+void Hey_ctor(Hey *self)
+{
+    static Hey_Vtable const vtbl = {
+        Hey_dtor, // destructor
+        NULL, // foo
+        NULL // hey
+    };
+    self->vtable = vtbl;
 }
 ```
 
-¡Listo!, hemos implementado _dynamic dispatch_, ¿no es asombroso?, sin embargo, como esta ahorita, no podemos, por ejemplo, acceder a propiedades de la estructura ``Dragon`` dentro ``dragon_damage_player``,
-sin embargo, si es posible hacerlo _pero no de manera sencilla_, pues tenemos que movernos en la memoria para ello (en este caso no hay tanto problema, simplemente hacemos un cast a ``Dragon``), por ejemplo, 
+¡Genial!, ya podemos invocar al dtor de la siguiente manera: ``hey.vtable->Class_dtor(&hey)``.
+
+Ahora, realicemos la implementación para Foo:
+
+```c
+typedef struct Foo
+{
+    Hey base;
+} Foo;
+
+void Foo_dtor(Foo *self)
+{
+    Hey_dtor(self->base);
+}
+
+void Foo_foo(Foo *self) {}
+
+void Foo_hey(Foo *self) {}
+
+void Foo_ctor(Foo *self)
+{
+    Hey_ctor(&self->super);
+    static Hey_Vtable const vtbl = {
+        Foo_dtor, // destructor
+        Foo_foo, // foo
+        Foo_hey // hey
+    };
+    self->base->vtable = vtbl;
+}
+```
+
+Y para llamar cualquier método lo hacemos de la misma manera que con el dtor.
+
+
+Hay una cosa que no hemos discutido: el _casting_ de clases hijas a padres y de padres a hijas, a continuación, están las opciones para hacerlo.
+
+### Hija a padre
+
+|Tipo                           | Implementación            |
+|-------------------------------|---------------------------|
+|Herencia simple, sin interfaces|Utilizar ``super``         |
+|Herencia multiple o con interfaces|Se implementan las interfaces como campos, se devuelve la interfaz a la que se necesite hacer casting |
+
+### Padre a hija
+> Se recomienda tener un campo donde verifiques la clase a la que pertenece el objeto
+> y verifiques si el casting es válido en tiempo de ejecución
+
+|Tipo                              |Implementación                              |
+|----------------------------------|--------------------------------------------|
+|Herencia simple, sin interfaces   |Hacer casting de ``super`` a un objeto del tipo de la clase hija|
+
+Para herencia multiple o multiples interfaces se necesita saber el layout em memoria del objeto en cuestión, 
+por ejemplo, si ``super`` tiene un offset de 0x00 en la clase hija, entonces basta 
+con un casting, por el contrario, si el offset es diferente de 0x00, tenemos que 
+movernos al principio y aquí ya hacer casting (esto es peligroso, se utiliza 
+aritmética de apuntadores), por ejemplo, imaginemos esto:
+
+<blockquote>
+    <i class="v-icon mdi mdi-alert" style="color: yellow; font-size: 2em"></i> Esto es Undefined Behavior
+    <br>
+</blockquote>
+
+```c
+typedef struct Child
+{
+    Super1 super1;
+    Super2 super2;
+}Child;
+
+void f()
+{
+    Child c;
+    Super1 *s1 = (Super1*)(&c.super1);
+    Super2 *s2 = (Super2*)(&c.super2);
+    // Vamos a regresarnos
+    Child *c1 = (Child*)s1;
+    unsigned char *temp = (void*)s2;
+    Child *c2 = (Child*)(s2 - sizeof(Super1)); // retrecedemos sizeof Super1 espacios en memoria
+}
+```
+Puedes verlo 👉 [aquí](https://godbolt.org/z/QQmJGQ) 👈
+
+# Conclusiones
+Realizar todo este proceso es muy tardado, y, probablemente es mejor que no lo hagas, si por
+alguna razón quieres continuar utilizando C pero quieres orientación a objetos, checa [GObject](https://developer.gnome.org/gobject/stable/), probablemente sea lo que estas buscando.
+
+Finalmente, esta no es la única forma de realizar todo esto, ¡hay muchas!, en este sentido
+C es bastante flexible, pues podemos hacer lo que queramos de la manera en que queramos.
