--- a/content/blog/2020-06-24-oop_c.md
+++ b/content/blog/2020-06-24-oop_c.md
@@ -325,12 +325,13 @@ public:
 
 ```
 
-
+<div style="overflow-x: auto;">
 |Método             |Función que realiza ese proceso|
 |-------------------|-------------------------------|
 |Hey_dtor           |0x123EDFAA                     |
 |Hey_foo            |0x00000000                     |
 |Hey_hey            |0x00000000                     |
+</dive>
 Nota: la función es la dirección de la función que realizará ese proceso, puesto que no tienen implementación (a excepción del dtor) entonces no deben apuntar a una dirección válida.
 
 Ahora veamos a la siguiente clase
