--- a/content/blog/2020-07-14-can.md
+++ b/content/blog/2020-07-14-can.md
@@ -56,8 +56,13 @@ Se definen dos modos de operación para CAN, estándar y extendido, a continuaci
 
 Una trama en CAN estándar tiene la siguiente forma
 
+<div style="overflow-x: auto">
+
+
 | SOF | Identificador | RTR | IDE | r0 | DLC | datos | CRC | ACK | EOF | IFS |
 |-----|---------------|-----|-----|----|-----|-------|-----|-----|-----|-----|
+
+</div>
 
 Cada uno de estos campos consta de 1 bit a menos que se indique lo contrario.
 
@@ -77,8 +82,12 @@ Cada uno de estos campos consta de 1 bit a menos que se indique lo contrario.
 
 Una trama CAN tiene la siguiente forma.
 
+<div style="overflow-x: auto">
+
 | SOF | Identificador | SRR | IDE | Identificador | r1 | r0 | DLC | Data | CRC | ACK | EOF | IFS |
 |-----|---------------|-----|-----|---------------|----|----|-----|------|-----|-----|-----|-----|
+
+</div>
 
 Los bits son los mismos, salvo:
 * SRR (Substitute Remote Request): es un placeholder.
